--- a/wiki/de/Macro_TechDraw_AuxiliaryView.html
+++ b/wiki/de/Macro_TechDraw_AuxiliaryView.html
@@ -74,7 +74,7 @@ TechDraw Hilfsansicht
 <p><span id="Introduction"></span>
 </p>
 <h2><span class="mw-headline" id="Einleitung">Einleitung</span></h2>
-<p>Nicht jeder, der eine Zeichnung mit seinem Modell mitliefern muss, kommt mit nur drei Hauptansichten (prim&auml;ren Ansichten) und Schnittansichten parallel zu diesen aus. Um ein Modell aus allen m&ouml;glichen Winkeln abzubilden, sind Konstrukteure auf Hilfsansichten (auxiliary views, sekund&auml;re Ansichten) angewiesen, die in einer bestimmten Ordnung auf einem Zeichenblatt positioniert werden, um den Weg nachvollziehen zu k&ouml;nnen, auf dem jede Ansicht in einer Kette festgelegt wurde. Unzusammenh&auml;ngende Ansichten, im 3D-Raum festgelegt und beliebig auf dem Zeichenblatt positioniert, sind kein sinnvoller Ersatz f&uuml;r richtig angeordnete Hilfsansichten.
+<p>Nicht jeder, der eine Zeichnung mit seinem Modell mitliefern muss, kommt mit nur drei Hauptansichten (prim&auml;ren Ansichten) und Schnittansichten parallel zu diesen aus. Um ein Modell aus allen m&ouml;glichen Winkeln abzubilden, sind Konstrukteure auf Hilfsansichten (auxiliary views, sekund&auml;re Ansichten) angewiesen, die in einer bestimmten Anordnung auf einem Zeichenblatt positioniert werden, um den Weg nachverfolgen zu k&ouml;nnen, wie jede der verketteten Ansichten festgelegt wurde. Unzusammenh&auml;ngende Ansichten, im 3D-Raum festgelegt und beliebig auf dem Zeichenblatt positioniert, sind kein brauchbarer Ersatz f&uuml;r richtig angeordnete Hilfsansichten.
 </p><p>Bis jetzt stellt diese Seite nur ein Makro zur Verf&uuml;gung, das zeigt, dass es m&ouml;glich ist, eine Hilfsansicht innerhalb einer Basisansicht festzulegen, ohne den Umweg &uuml;ber den 3D-Raum zu nehmen.
 </p><p><span id="Description"></span>
 </p>
@@ -420,12 +420,12 @@ if __name__ == "__main__":
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260113140745
+Cached time: 20260113142412
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.138 seconds
+CPU time usage: 0.062 seconds
+Real time usage: 0.090 seconds
 Preprocessor visited node count: 268/1000000
 Post&#8208;expand include size: 26642/2097152 bytes
 Template argument size: 20237/2097152 bytes
@@ -436,19 +436,19 @@ Unstrip post&#8208;expand size: 10897/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.080      1 -total
- 28.91%   10.430      1 Template:TechDraw_Tools_navi/de
- 19.23%    6.938      2 Template:Navigation_menu_2
- 17.04%    6.149      1 Template:Macro/de
- 16.10%    5.808      1 Template:Userdocnavi/de
-  8.57%    3.091      1 Template:Caption
-  8.23%    2.970      1 Template:MacroCode
-  8.04%    2.900      1 Template:VeryImportantMessage
-  5.31%    1.917      1 Template:Clear
-  4.98%    1.797      1 Template:Button
+100.00%   20.125      1 -total
+ 27.67%    5.568      1 Template:TechDraw_Tools_navi/de
+ 22.03%    4.433      1 Template:Macro/de
+ 17.50%    3.521      2 Template:Navigation_menu_2
+  9.70%    1.953      1 Template:Caption
+  9.10%    1.831      1 Template:Userdocnavi/de
+  8.92%    1.795      1 Template:MacroCode
+  7.56%    1.521      1 Template:Clear
+  5.93%    1.193      1 Template:VeryImportantMessage
+  5.63%    1.134      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113140744 and revision id 1737849. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113142412 and revision id 1737853. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
