--- a/wiki/de/Macro_TechDraw_AuxiliaryView.html
+++ b/wiki/de/Macro_TechDraw_AuxiliaryView.html
@@ -87,7 +87,7 @@ TechDraw Hilfsansicht
 <span id="Example_use_case"></span>
 </p>
 <h3><span class="mw-headline" id="Beispielanwendung">Beispielanwendung</span></h3>
-<p>Gehen wir davon aus, dass uns eine netzparallele Ansicht vorliegt, aus der wir andere Ansichten entwickeln wollen, um die wahren Formen der Formelemente darzustellen, die bema&szlig;t werden sollen.
+<p>Gehen wir davon aus, dass uns eine netzparallele Ansicht vorliegt, aus der wir andere Ansichten ableiten wollen, um die wahren Formen der Formelemente darzustellen, die bema&szlig;t werden sollen.
 </p><p>Die Schl&uuml;sselidee ist, eine gerade Linie in der Basisansicht auszuw&auml;hlen, und senkrecht darauf eine Hilfsansicht festzulegen, die als Basisansicht f&uuml;r eine weitere Hilfsansicht entlang dieser geraden Linie dient. Wir k&ouml;nnen die Hilfsansichten aneinanderketten, bis wir alle drei Hauptansichten des Objekts und eine entlang der zylindrischen Teilform erstellt haben:
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_AuxiliaryView_Pre02.png&amp;filetimestamp=20250507173928&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AuxiliaryView_Pre02.png" decoding="async" width="400" height="433" class="mw-file-element" data-file-width="722" data-file-height="782"></a></span>
 </p><p>Die beliebig positionierte gerade Linie (rot) in der Startansicht (Start view) wird als Linie mit wahrer L&auml;nge in die Hilfsansicht X und als Punkt in die Hilfsansicht Y projiziert, wo auch die wahre Breite und die wahre St&auml;rke der Bodenplatte erkennen. Hilfsansicht Z wird senkrecht zur Bodenplatte festgelegt und stellt die wahre form der Bodenplatte und ihrer L&ouml;cher dar. Hilfsansicht R steht senkrecht auf der l&auml;ngeren Kante der Bodenplatte und zeigt die wahren Winkel der Boden- und Deckelfl&auml;chen der zylindrischen Teilform und wie sie an die Bodenplatte passt. Die letzte, Hilfsansicht S, wird entlang der Zylinderachse festgelegt und zeigt den Durchmesser und die Wandst&auml;rke der zylindrischen Teilform.
@@ -420,12 +420,12 @@ if __name__ == "__main__":
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260113142852
+Cached time: 20260113143115
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.060 seconds
-Real time usage: 0.093 seconds
+CPU time usage: 0.063 seconds
+Real time usage: 0.108 seconds
 Preprocessor visited node count: 268/1000000
 Post&#8208;expand include size: 26642/2097152 bytes
 Template argument size: 20237/2097152 bytes
@@ -436,19 +436,19 @@ Unstrip post&#8208;expand size: 10897/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.933      1 -total
- 27.65%    6.341      1 Template:TechDraw_Tools_navi/de
- 24.07%    5.521      1 Template:Macro/de
- 14.86%    3.407      2 Template:Navigation_menu_2
- 11.94%    2.738      1 Template:MacroCode
- 10.06%    2.308      1 Template:Userdocnavi/de
-  6.59%    1.510      1 Template:Caption
-  6.28%    1.439      1 Template:Clear
-  5.26%    1.206      1 Template:VeryImportantMessage
-  5.25%    1.203      1 Template:Button
+100.00%   31.421      1 -total
+ 31.50%    9.896      1 Template:TechDraw_Tools_navi/de
+ 26.64%    8.370      1 Template:Macro/de
+ 13.85%    4.353      2 Template:Navigation_menu_2
+  8.44%    2.652      1 Template:Caption
+  8.05%    2.528      1 Template:Userdocnavi/de
+  7.10%    2.232      1 Template:Button
+  5.81%    1.826      1 Template:VeryImportantMessage
+  5.49%    1.725      1 Template:MacroCode
+  3.20%    1.005      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113142852 and revision id 1737857. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113143115 and revision id 1737859. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
