--- a/wiki/it/Macro_Site_From_Contours.html
+++ b/wiki/it/Macro_Site_From_Contours.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Site_From_Contours.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Grundst&uuml;ck aus Konturen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Site_From_Contours.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Site From Contours (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Site_From_Contours.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Site From Contours (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Site_From_Contours.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Teren z konturu (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -80,11 +80,8 @@ Macro Sito da contorni
 </p><p><span id="Script"></span>
 </p>
 <h2><span class="mw-headline" id="Lo_Script">Lo Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Site_From_Contours.png&amp;filetimestamp=20190704172250&amp;.html" class="mw-file-description"><img src="../File/Macro_Site_From_Contours.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro Site From Contours.FCMacro</b>
+<p>Icona barra strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Site_From_Contours.png&amp;filetimestamp=20190704172250&amp;.html" class="mw-file-description"><img src="../File/Macro_Site_From_Contours.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro Site From Contours.FCMacro</b>
 </p>
 <pre># This macro builds an Arch Site object out of different level curves.
 # It doesn't matter how many object contain the curves or if they
@@ -161,28 +158,28 @@ FreeCAD.ActiveDocument.recompute()</pre>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260113165437
+Cached time: 20260113165449
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.044 seconds
-Preprocessor visited node count: 91/1000000
+CPU time usage: 0.026 seconds
+Real time usage: 0.041 seconds
+Preprocessor visited node count: 90/1000000
 Post&#8208;expand include size: 1958/2097152 bytes
 Template argument size: 2230/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3049/5000000 bytes
+Unstrip post&#8208;expand size: 3053/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.259      1 -total
- 52.96%    3.844      1 Template:MacroCode
- 45.63%    3.312      1 Template:Macro/it
+100.00%    4.347      1 -total
+ 66.19%    2.877      1 Template:Macro/it
+ 31.65%    1.376      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:105091-0!canonical and timestamp 20260113165437 and revision id 1737889. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:105091-0!canonical and timestamp 20260113165449 and revision id 1737891. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
