--- a/wiki/it/Macro_Site_From_Contours.html
+++ b/wiki/it/Macro_Site_From_Contours.html
@@ -8,14 +8,14 @@
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
 <p><span typeof="mw:File"><a href="../index.php?title=Macro_Site_From_Contours.png&amp;filetimestamp=20190704172250&amp;.html" class="mw-file-description"><img src="../File/Macro_Site_From_Contours.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span> </span>
-Macro Sito da contorni
+Macro Site From Contours
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Crea un sito Arch da una serie di contorni.<br><br>Versione macro: 1.0<br>Ultima modifica: 2018-08-30<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/File:Macro_Site_From_Contours.png">ToolBar Icon</a><br>Autore: yorik<br>
+<td class="ctEven left macro-description">Questa macro consente di selezionare una serie di oggetti contenenti curve di livello e di creare un sito Arch da essi. Le curve di livello possono essere raggruppate in un numero qualsiasi di oggetti e non &egrave; necessario che formino polilinee chiuse. La macro si occuper&agrave; di tutto. Internamente, verr&agrave; creata una B-spline da ogni curva, quindi verranno create superfici rigate tra le curve, in seguito queste superfici rigate verranno unite in un oggetto shell e infine verr&agrave; creato un sito Arch utilizzando questa superficie shell come terreno.<br><br>Versione macro: 1.0<br>Ultima modifica: 2018-08-30<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/File:Macro_Site_From_Contours.png">ToolBar Icon</a><br>Autore: yorik<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autore
@@ -27,7 +27,7 @@ Macro Sito da contorni
 <th class="ctOdd">Download
 </th></tr>
 <tr>
-<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/File:Macro_Site_From_Contours.png">ToolBar Icon</a>
+<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/File:Macro_Site_From_Contours.png">ToolBar Icon</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Link
@@ -158,15 +158,15 @@ FreeCAD.ActiveDocument.recompute()</pre>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260113165652
+Cached time: 20260113165811
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.024 seconds
-Real time usage: 0.039 seconds
-Preprocessor visited node count: 90/1000000
-Post&#8208;expand include size: 1958/2097152 bytes
-Template argument size: 2230/2097152 bytes
+CPU time usage: 0.026 seconds
+Real time usage: 0.038 seconds
+Preprocessor visited node count: 89/1000000
+Post&#8208;expand include size: 2455/2097152 bytes
+Template argument size: 2703/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -174,12 +174,12 @@ Unstrip post&#8208;expand size: 3053/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.374      1 -total
- 54.11%    2.908      1 Template:Macro/it
- 44.33%    2.382      1 Template:MacroCode
+100.00%    3.994      1 -total
+ 51.65%    2.063      1 Template:Macro/it
+ 46.29%    1.849      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:105091-0!canonical and timestamp 20260113165652 and revision id 1737893. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:105091-0!canonical and timestamp 20260113165811 and revision id 1737895. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
