--- a/wiki/it/Macro_Remove_parametric_history.html
+++ b/wiki/it/Macro_Remove_parametric_history.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_Remove_parametric_history.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Remove parametric history (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_Remove_parametric_history.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Remove parametric history (57% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_Remove_parametric_history.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Remove parametric history (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Remove_parametric_history.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Usu&#324; histori&#281; parametryczn&#261; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_Remove_parametric_history.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Odebrat historii parametr&#367; (57% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -83,11 +83,8 @@ Rimozione della cronologia
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=RPH_after.png&amp;filetimestamp=20140510120926&amp;.html" class="mw-file-description"><img src="../File/RPH_after.png" decoding="async" width="263" height="186" class="mw-file-element" data-file-width="263" data-file-height="186"></a></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Remove_parametric_history.png&amp;filetimestamp=20190706192136&amp;.html" class="mw-file-description"><img src="../File/Macro_Remove_parametric_history.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Remove parametric history.FCMacro</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Remove_parametric_history.png&amp;filetimestamp=20190706192136&amp;.html" class="mw-file-description"><img src="../File/Macro_Remove_parametric_history.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Remove parametric history.FCMacro</b>
 </p>
 <pre>originalObject = FreeCAD.ActiveDocument.ActiveObject
 newShape = originalObject.Shape.copy()
@@ -97,28 +94,28 @@ newObject = FreeCAD.ActiveDocument.addObject("Part::Feature",newName)
 newObject.Shape = newShape</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260113165940
+Cached time: 20260113165952
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.030 seconds
-Real time usage: 0.046 seconds
-Preprocessor visited node count: 85/1000000
+CPU time usage: 0.045 seconds
+Real time usage: 0.058 seconds
+Preprocessor visited node count: 84/1000000
 Post&#8208;expand include size: 2076/2097152 bytes
 Template argument size: 837/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1996/5000000 bytes
+Unstrip post&#8208;expand size: 2000/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.119      1 -total
- 56.76%    2.338      1 Template:Macro/it
- 41.00%    1.689      1 Template:MacroCode
+100.00%    6.110      1 -total
+ 53.16%    3.248      1 Template:Macro/it
+ 43.60%    2.664      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2329-0!canonical and timestamp 20260113165940 and revision id 1737899. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2329-0!canonical and timestamp 20260113165952 and revision id 1737901. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
