--- a/wiki/it/Macro_Geodesic_Dome.html
+++ b/wiki/it/Macro_Geodesic_Dome.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Geodesic Dome/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Geodesic+Dome&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Geodesic_Dome.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Geod&auml;tische Kuppel (50% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Geodesic_Dome.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Geod&auml;tische Kuppel (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Geodesic_Dome.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Geodesic Dome (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Geodesic_Dome.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Geodesic Dome (79% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_Geodesic_Dome.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Geodesic Dome (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Geodesic_Dome.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Kopu&#322;a geodezyjna (7% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -72,11 +72,11 @@ Cupola Geodetica
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa macro crea il guscio di una cupola (sfera) geodetica parametrica. Il raggio della cupola e il parametro di frequenza (fattore d'arco) sono definiti al momento della creazione.
 </p>
 </div>
@@ -441,28 +441,28 @@ d.show()
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20251022141818
+Cached time: 20260113170148
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.058 seconds
-Real time usage: 0.067 seconds
+CPU time usage: 0.038 seconds
+Real time usage: 0.055 seconds
 Preprocessor visited node count: 109/1000000
 Post&#8208;expand include size: 2660/2097152 bytes
 Template argument size: 999/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 14175/5000000 bytes
+Unstrip post&#8208;expand size: 14186/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.995      1 -total
- 70.16%    2.803      1 Template:Macro/it
- 27.74%    1.108      1 Template:Codeextralink
+100.00%    6.843      1 -total
+ 54.07%    3.700      1 Template:Macro/it
+ 43.62%    2.985      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54914-0!canonical and timestamp 20251022141818 and revision id 1672372. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54914-0!canonical and timestamp 20260113170148 and revision id 1737903. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
