--- a/wiki/it/Macro_Geodesic_Dome.html
+++ b/wiki/it/Macro_Geodesic_Dome.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Geodesic_Dome.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Geod&auml;tische Kuppel (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Geodesic_Dome.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Geodesic Dome (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Geodesic_Dome.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Geodesic Dome (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Geodesic_Dome.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Kopu&#322;a geodezyjna (7% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -120,12 +120,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>(questa &egrave; una vecchia versione non parametrica dello script. La versione aggiornata &egrave; nel repository delle macros di FreeCAD, <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/ParametricObjectCreation/geodesic_dome/geodesic_dome.py">qui!</a> )
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Geodesic_Dome.svg&amp;filetimestamp=20190616184248&amp;.html" class="mw-file-description"><img src="../File/Macro_Geodesic_Dome.svg" decoding="async" width="135" height="133" class="mw-file-element" data-file-width="135" data-file-height="133"></a></span>
-</p>
-</div>
-<p><b>Macro_Geodesic_Dome.FCMacro</b>
+</p><p>Iconda barra strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Geodesic_Dome.svg&amp;filetimestamp=20190616184248&amp;.html" class="mw-file-description"><img src="../File/Macro_Geodesic_Dome.svg" decoding="async" width="135" height="133" class="mw-file-element" data-file-width="135" data-file-height="133"></a></span>
+</p><p><b>Macro_Geodesic_Dome.FCMacro</b>
 </p>
 <pre># -*- coding: utf-8 -*-
 
@@ -438,28 +434,28 @@ d.show()
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260113170203
+Cached time: 20260113170236
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.061 seconds
-Preprocessor visited node count: 105/1000000
+CPU time usage: 0.028 seconds
+Real time usage: 0.047 seconds
+Preprocessor visited node count: 104/1000000
 Post&#8208;expand include size: 2660/2097152 bytes
 Template argument size: 999/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 14186/5000000 bytes
+Unstrip post&#8208;expand size: 14190/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.961      1 -total
- 60.05%    4.180      1 Template:Macro/it
- 38.24%    2.662      1 Template:Codeextralink
+100.00%    5.261      1 -total
+ 55.01%    2.894      1 Template:Macro/it
+ 43.34%    2.280      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54914-0!canonical and timestamp 20260113170203 and revision id 1737905. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54914-0!canonical and timestamp 20260113170236 and revision id 1737907. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
