--- a/wiki/de/Macros_recipes.html
+++ b/wiki/de/Macros_recipes.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macros recipes/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macros+recipes&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macros_recipes.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macros recipes (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="Macros recipes (1% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--complete" title="Liste des macros (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -233,9 +233,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Center_Align_Objects_with_Faces_or_Edges.png&amp;filetimestamp=20170212141827&amp;.html" class="mw-file-description"><img src="../File/Macro_Center_Align_Objects_with_Faces_or_Edges.png" decoding="async" width="24" height="22" class="mw-file-element" data-file-width="64" data-file-height="59"></a></span> <a href="../de/Macro_Center_Align_Objects_with_Faces_or_Edges.html" title="Macro Center Align Objects with Faces or Edges/de">Makro Objekte mit Fl&auml;chen oder Kanten zentrieren</a></span>: Dieses Makro deckt die folgenden Beschr&auml;nkungen ab: Konzentrische Beschr&auml;nkung zwischen nicht zylindrischen Teilen und Beschr&auml;nkung auf mittige Fl&auml;chen und/oder Kanten. Es funktioniert auch mit den neuen Containern K&ouml;rper und App::Part sowie mit der STEP-Hierarchie.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_CloneConvert.png&amp;filetimestamp=20150725195453&amp;.html" class="mw-file-description"><img src="../File/Macro_CloneConvert.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_CloneConvert.html" title="Macro CloneConvert/de">Makro Klon konvertieren</a></span>: Erstellt einen Klon des Objekts und konvertiert es in die gew&auml;hlte Position und Gr&ouml;&szlig;e (Zoll, mm, m, &micro;m...). Das Basisobjekt wird in mm erkannt (FreeCAD-Basis).</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Connect_And_Sweep.png&amp;filetimestamp=20160607100845&amp;.html" class="mw-file-description"><img src="../File/Macro_Connect_And_Sweep.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="65" data-file-height="64"></a></span> <a href="../de/Macro_Connect_And_Sweep.html" title="Macro Connect And Sweep/de">Makro Verbinden und Austragen</a></span>: Dieses Makro erstellt auf einfache Weise eine Verbindung zwischen zwei Objekten, einem Objekt und einem Punkt oder zwischen zwei Punkten oder der ausgew&auml;hlten Linie, dem Linienzug, der Kante (die Mittelpunkte der Objekte sind der Start- und Endpunkt des Sweeps) und kann aus einem konfigurierbaren Ellipsenpolygonkreis ausgew&auml;hlt werden.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Cut_Object_For_Magnets.png&amp;filetimestamp=20260106011212&amp;.html" class="mw-file-description"><img src="../File/Macro_Cut_Object_For_Magnets.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Cut_Object_For_Magnets.html" title="Macro Cut Object For Magnets">Macro Cut Object For Magnets</a></span>: This macro makes it easy to slice apart an object and insert round holes of a declared number, width and depth on each side of the cut for magnets (or dowels). This can be useful for various 3D printing applications, etc.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Cut_Object_For_Magnets.png&amp;filetimestamp=20260106011212&amp;.html" class="mw-file-description"><img src="../File/Macro_Cut_Object_For_Magnets.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Macro_Cut_Object_For_Magnets/de&amp;action=edit&amp;redlink=1.html" class="new" title="Macro Cut Object For Magnets/de (page does not exist)">Makro Objekt f&uuml;r Magnete ausschneiden</a></span>: Dieses Makro erleichtert das Zerschneiden eines Objekts und das Einf&uuml;gen runder L&ouml;cher mit einer festgelegten Anzahl, Breite und Tiefe auf jeder Seite des Schnitts f&uuml;r Magnete (oder D&uuml;bel). Dies kann f&uuml;r verschiedene 3D-Druckanwendungen usw. n&uuml;tzlich sein.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Std_AxisCross_example.svg&amp;filetimestamp=20200402191429&amp;.html" class="mw-file-description"><img src="../File/Std_AxisCross_example.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="150" data-file-height="150"></a></span> <a href="../de/Macro_Express_Placement.html" title="Macro Express Placement/de">Makro Express-Platzierung</a></span>: Zeigt die Platzierungskoordinaten eines ausgew&auml;hlten Objekts direkt oder &uuml;ber Ausdr&uuml;cke an und bearbeitet sie schnell.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FlattenWire.png&amp;filetimestamp=20190704184313&amp;.html" class="mw-file-description"><img src="../File/Macro_FlattenWire.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FlattenWire.html" title="Macro FlattenWire/de">Makro Linienzug abflachen</a></span>: Flacht Linienz&uuml;ge ab, die nicht planar zu ihrer mittleren Z-Koordinate sind.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FlattenWire3Points.png&amp;filetimestamp=20190706165929&amp;.html" class="mw-file-description"><img src="../File/Macro_FlattenWire3Points.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FlattenWire3Points.html" title="Macro FlattenWire3Points/de">Makro Linienzug abflachen mit drei Punkten</a></span>: Flacht Linienz&uuml;ge ab, die nicht planar zu einer durch drei Punkte definierten Ebene sind.</li></ul>
@@ -420,31 +418,31 @@
 <li>Unter dem Men&uuml;reiter <b>Symbolleisten</b> eine neue Symbolleiste erstellen und das Makro aus der Kategorie <b>Makros</b> hinzuf&uuml;gen.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113123922
+Cached time: 20260113194135
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.438 seconds
-Real time usage: 0.484 seconds
-Preprocessor visited node count: 2864/1000000
-Post&#8208;expand include size: 28768/2097152 bytes
-Template argument size: 16088/2097152 bytes
+CPU time usage: 0.503 seconds
+Real time usage: 1.135 seconds
+Preprocessor visited node count: 2863/1000000
+Post&#8208;expand include size: 28781/2097152 bytes
+Template argument size: 16101/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1951/5000000 bytes
+Unstrip post&#8208;expand size: 1955/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.268      1 -total
- 40.66%   10.680    219 Template:MacroLink
-  7.14%    1.876      1 Template:Version/de
-  6.89%    1.809      6 Template:MenuCommand
-  5.11%    1.342      1 Template:TOCright
-  4.38%    1.151      3 Template:Button
+100.00%  123.688      1 -total
+ 25.62%   31.688    219 Template:MacroLink
+ 14.71%   18.196      6 Template:MenuCommand
+  5.56%    6.875      1 Template:TOCright
+  3.61%    4.471      1 Template:Version/de
+  2.65%    3.277      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113123922 and revision id 1737844. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113194133 and revision id 1737910. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
